refactor code and pending implementation video file
