# src/main/kotlin/data/model/file/FileRequestDTO.kt
@@ -1,0 +1,11 @@
+package com.ktor.data.model.file
+
+import kotlinx.serialization.Serializable
+
+
+@Serializable
+data class FileRequestDTO(
+    var name: String,
+    var contentType: String,
+    var bytesBase64: String
+)
