# src/main/kotlin/data/model/message/MessageResponseDTO.kt
@@ -15,5 +15,5 @@ data class MessageResponseDto(
     val sender: String,
     val message: String,
     val timestamp: Long,
-    val fileUrl: String? = null
+    val fileId: String? = null // Cambiado de fileUrl a fileId
 )
